# strict_enum

./: CMakeLists.txt  README.md
cmake/: Fetch.cmake
include/strict_enum/: strict_enum.hpp
